--- a/estimate/embeddings.ipynb
+++ b/estimate/embeddings.ipynb
@@ -2,18 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "input_path = \"../data/blooms.csv\"\n",
-    "checkpoint = \"lightning_logs/version_9/checkpoints/epoch=49-step=1200.ckpt\"\n",
+    "checkpoint = \"lightning_logs/version_0/checkpoints/epoch=99-step=2400.ckpt\"\n",
     "output_path = \"../data/embeddings.csv\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,20 +23,30 @@
     "from transformer import LinearData, Transformer, LitTransformer\n",
     "\n",
     "# use the data from ../generate\n",
+    "device = \"mps\"\n",
     "samples_df = pd.read_csv(input_path)\n",
     "dataset = LinearData(samples_df)\n",
     "loader = DataLoader(dataset, batch_size=64)\n",
     "lit_model = LitTransformer.load_from_checkpoint(checkpoint, model = Transformer())\n",
     "\n",
     "z = []\n",
-    "i = 1\n",
-    "\n",
     "with torch.no_grad():\n",
     "  for x, y in loader:\n",
-    "    print(i)\n",
-    "    i += 1\n",
-    "    z_, _ = lit_model.model(x)\n",
+    "    z_, _ = lit_model.model(x.to(device))\n",
     "    z.append(z_[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "z0 = torch.cat(z, dim=0)\n",
+    "z0 = z0.view(z0.size(0), -1).cpu().numpy()\n",
+    "np.savetxt(output_path, z0, delimiter=',')"
    ]
   },
   {
@@ -44,13 +54,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "import numpy as np\n",
-    "\n",
-    "z0 = torch.cat(z, dim=0)\n",
-    "z0 = z0.view(z0.size(0), -1).numpy()\n",
-    "np.savetxt(output_path, z0, delimiter=',')"
-   ]
+   "source": []
   }
  ],
  "metadata": {
@@ -69,7 +73,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.1"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
