--- a/estimate/embeddings.ipynb
+++ b/estimate/embeddings.ipynb
@@ -8,7 +8,8 @@
    "source": [
     "input_path = \"../data/blooms.csv\"\n",
     "checkpoint = \"lightning_logs/version_0/checkpoints/epoch=99-step=2400.ckpt\"\n",
-    "output_path = \"../data/embeddings.csv\""
+    "output_path = \"../data/embeddings.csv\"\n",
+    "device = \"mps\""
    ]
   },
   {
@@ -23,7 +24,6 @@
     "from transformer import LinearData, Transformer, LitTransformer\n",
     "\n",
     "# use the data from ../generate\n",
-    "device = \"mps\"\n",
     "samples_df = pd.read_csv(input_path)\n",
     "dataset = LinearData(samples_df)\n",
     "loader = DataLoader(dataset, batch_size=64)\n",
