--- a/estimate/simple_transformer.ipynb
+++ b/estimate/simple_transformer.ipynb
@@ -54,7 +54,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can now train the model based on the input data loader, using a lightning trainer."
+    "We can now train the model based on the input data loader, using a lightning trainer. Training and validation accuracies can be checked by starting a tensorboard viewer in the `lightning_logs` directory:"
    ]
   },
   {
@@ -67,7 +67,7 @@
     "from transformer import LitTransformer\n",
     "\n",
     "lit_model = LitTransformer(model)\n",
-    "trainer = L.Trainer(max_epochs=100)\n",
+    "trainer = L.Trainer(max_epochs=35)\n",
     "trainer.fit(lit_model, loaders[\"train\"], loaders[\"validate\"])"
    ]
   },
@@ -86,7 +86,7 @@
     "  for x, _ in loaders[\"validate\"]:\n",
     "    p_hat.append(lit_model.model(x)[1])\n",
     "\n",
-    "pd.DataFrame(torch.concatenate(p_hat)).to_csv(\"../data/p_hat.csv\")"
+    "#pd.DataFrame(torch.concatenate(p_hat)).to_csv(\"../data/p_hat.csv\")"
    ]
   },
   {
@@ -128,7 +128,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.1"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
