--- a/estimate/integrated_gradients.ipynb
+++ b/estimate/integrated_gradients.ipynb
@@ -2,18 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "input_path = \"../data/blooms.csv\"\n",
-    "checkpoint = \"lightning_logs/version_9/checkpoints/epoch=49-step=1200.ckpt\"\n",
-    "output_path = \"../data/attributions.csv\""
+    "checkpoint = \"lightning_logs/version_0/checkpoints/epoch=34-step=840.ckpt\"\n",
+    "output_path = \"../data/attributions.csv\"\n",
+    "device = \"cpu\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,39 +30,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "from captum.attr import IntegratedGradients\n",
     "\n",
-    "lit_model = LitTransformer.load_from_checkpoint(checkpoint, model = Transformer())\n",
+    "lit_model = LitTransformer.load_from_checkpoint(checkpoint, model = Transformer()).to(device)\n",
     "\n",
     "def forward(model):\n",
     "  return lambda x: model(x)[1]\n",
     "\n",
     "ig = IntegratedGradients(forward(lit_model.model))\n",
     "x, y = next(iter(loader))\n",
-    "i_hat = ig.attribute(x)"
+    "i_hat = ig.attribute(x.to(device))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "i_hat.shape\n",
-    "np.savetxt(output_path, np.reshape(i_hat, (64, -1)), delimiter=',')"
+    "np.savetxt(output_path, np.reshape(i_hat, (64, -1)).cpu(), delimiter=',')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -80,7 +73,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.1"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
