--- a/estimate/interpretable.Rmd
+++ b/estimate/interpretable.Rmd
@@ -9,14 +9,6 @@ knitr::opts_chunk$set(warning = FALSE, message = FALSE)
 ```
 
 ```{r}
-library(RcppEigen)
-library(broom)
-library(ggrepel)
-library(glmnetUtils)
-library(glue)
-library(patchwork)
-library(rpart.plot)
-library(tidymodels)
 library(tidyverse)
 theme_set(theme_classic())
 set.seed(20240201)
@@ -27,6 +19,7 @@ source("estimate/interpretable.R")
 samples <- read_csv("data/blooms.csv") |>
   mutate(class = factor(class))
 xy <- select(samples, -subject)
+p <- list()
 ```
 
 ```{r}
@@ -41,15 +34,15 @@ tune_spec <- logistic_reg(penalty = tune(), mixture = 1) |>
   set_engine("glmnet")
 
 lasso_result <- lasso_outputs(tune_spec, wf, xy)
-tidy(lasso_result$fit) |>
-  arrange(-estimate) |>
-  select(term, estimate)
-lasso_result$plot
-lasso_result$errors
+p[["lasso_raw"]] <- lasso_result$plot +
+  labs(title = "(a) Original Lasso")
+lasso_result
+```
 
-collect_metrics(lasso_result$grid) |>
-  filter(.metric == "accuracy") |>
-  arrange(-mean)
+```{r}
+p[["stability_raw"]] <- compare_splits(xy, lasso_result$grid)$p +
+  theme(legend.position = "none") +
+  labs(title = "(e) Original Lasso Stability")
 ```
 
 Here is the analogous code for a decision tree.
@@ -60,6 +53,8 @@ tree_spec <- decision_tree(cost_complexity = tune()) |>
   set_mode("classification")
 
 final_tree <- tree_outputs(tree_spec, wf, xy)
+p[["tree_raw"]] <- final_tree$plot +
+  labs(title = "(c) Original Tree")
 final_tree
 ```
 
@@ -104,47 +99,37 @@ tree_spec <- decision_tree(cost_complexity = tune()) |>
   set_mode("classification")
 
 lasso_result <- lasso_outputs(tune_spec, wf, xy_features)
-lasso_result$fit |>
-  extract_fit_parsnip() |>
-  tidy() |>
-  summarise(sum(estimate != 0))
+lasso_result
+p[["lasso_features"]] <- lasso_result$p +
+  labs(title = "(b) Featurized Lasso") +
+  scale_y_discrete(
+    labels = \(x) str_replace(x, "curvature", "c") |> str_replace("slope", "s")
+  ) +
+  theme(axis.text.y = element_text(size = 5))
 
 tree_result <- tree_outputs(tree_spec, wf, xy_features)
-tree_result$grid |>
-  collect_metrics() |>
-  filter(.metric == "accuracy") |>
-  summarise(max(mean))
-tree_result$plot
+p[["tree_features"]] <- tree_result$plot +
+  labs(title = "(d) Featurized Tree")
+
+tree_result
 ```
 
-Let's inspect the stability of these models...
+```{r}
+comparison <- compare_splits(xy_features, lasso_result$grid)
 
-```{r, eval = FALSE}
-xy_split <- initial_split(xy, prop = 0.5)
+p[["stability_features"]] <- comparison$plot +
+  labs(title = "(f) Featurized Lasso Stability")
+```
 
-fits <- list(tree = list(), lasso = list())
-split_funs <- c(training, testing)
-for (i in seq_along(split_funs)) {
-  fits[["lasso"]][[i]] <- wf |>
-    add_model(tune_spec) |>
-    finalize_workflow(select_best(lasso_result$grid, metric = "accuracy")) |>
-    fit(split_funs[[i]](xy_split))
-}
+```{r}
+(p[["lasso_raw"]] / p[["lasso_features"]]) |
+(p[["tree_raw"]] / p[["tree_features"]]) |
+(p[["stability_raw"]] / p[["stability_features"]]) +
+  plot_layout(guides = "collect")
+ggsave("data/direct_interpretability_simulation.png", width = 16, height = 8)
+```
 
-coef_compare <- bind_rows(
-  tidy(extract_fit_parsnip(fits[["lasso"]][[1]])),
-  tidy(extract_fit_parsnip(fits[["lasso"]][[2]])),
-  .id = "split"
-) |>
-  pivot_wider(names_from = split, values_from = estimate)
-
-ggplot(coef_compare, aes(`1`, `2`)) +
-  geom_point() +
-  geom_text_repel(data = filter(coef_compare, abs(`1`) + abs(`2`) > 0.4), aes(`1`, `2`, label = term), size = 6) +
-  labs(x = "Split 1", y = "Split 2", title = expression(paste(hat(beta), " ", "across splits"))) +
-  theme(
-    axis.title = element_text(size = 20),
-    axis.text = element_text(size = 18),
-    title = element_text(size = 20)
-  )
+```{r}
+comparison$coef |>
+  filter(abs(`1`) > 0 & abs(`2`) > 0)
 ```
