--- a/estimate/transformer.ipynb
+++ b/estimate/transformer.ipynb
@@ -4,9 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Data Loader\n",
+    "### Transformer on Simulated Trajectories\n",
     "\n",
-    "Before we can estimate any model, we should load in the data that we created in `linear.Rmd`. We'll reshape it so that we can sample random subjects in each batch."
+    "Before we can estimate any model, we need to reshape the data so that we can sample random subjects in each batch. This is accomplished using the `LinearData` loader, defined in the accompanying `transformer.py` script. We have reserved 375 samples for training and 125 for validation. You can download the data from [this link](https://github.com/krisrs1128/interpretability_review/tree/main/data)."
    ]
   },
   {
@@ -21,7 +21,6 @@
     "from transformer import LinearData\n",
     "from transformer import Transformer\n",
     "\n",
-    "# use the data from ../generate\n",
     "torch.manual_seed(20240210)\n",
     "samples_df = pd.read_csv(\"../data/blooms.csv\")\n",
     "\n",
@@ -37,7 +36,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Next, we let's define a model with a forward function that lets us get predicted probabilities for the two classes given the historical microbiome profile so far."
+    "Next, we let's define a model with a forward function that lets us get predicted probabilities for the two classes given the historical microbiome profile so far. Just to make sure that this works as expected, let's pass in some random data."
    ]
   },
   {
@@ -54,7 +53,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can now train the model based on the input data loader, using a lightning trainer. Training and validation accuracies can be checked by starting a tensorboard viewer in the `lightning_logs` directory:"
+    "We can now train the model based on the input data loader, using a lightning trainer. Training and validation accuracies can be checked by starting a tensorboard viewer in the `lightning_logs` directory (i.e., `tensorboard --logdir=path/to/lightning_logs`)."
    ]
   },
   {
@@ -72,6 +71,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In case we're interested, we can extract predicted probabilities for each sample. We set the model to evaluation mode and iterate over each sample in both the training and validation loaders."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -84,26 +90,7 @@
     "    p_hat.append(lit_model.model(x)[1])\n",
     "\n",
     "  for x, _ in loaders[\"validate\"]:\n",
-    "    p_hat.append(lit_model.model(x)[1])\n",
-    "\n",
-    "#pd.DataFrame(torch.concatenate(p_hat)).to_csv(\"../data/p_hat.csv\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "For future reference, here were the packages we installed for this example.\n",
-    "\n",
-    "```\n",
-    "conda create -n interpretability python=3.12\n",
-    "conda activate interpretability\n",
-    "\n",
-    "conda install conda-forge::lightning\n",
-    "conda install conda-forge::pandas\n",
-    "conda install conda-forge::tensorboard\n",
-    "conda install pytorch::captum\n",
-    "```"
+    "    p_hat.append(lit_model.model(x)[1])"
    ]
   },
   {
