--- a/estimate/embeddings.ipynb
+++ b/estimate/embeddings.ipynb
@@ -1,20 +1,36 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Save Model Embeddings\n",
+    "\n",
+    "This notebook saves embeddings from the transformer model into a csv. These outputs are visualized in `embeddings.Rmd`. First, let's define all of our notebook parameters."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "input_path = \"../data/blooms.csv\"\n",
-    "checkpoint = \"lightning_logs/version_0/checkpoints/epoch=99-step=2400.ckpt\"\n",
+    "checkpoint = \"lightning_logs/version_0/checkpoints/epoch=69-step=1680.ckpt\"\n",
     "output_path = \"../data/embeddings.csv\"\n",
     "device = \"mps\""
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The block below defines a loader with all the trajectory data (training and validation). It computes the embeddings for each sample by looping over the loader. Note that our transformer definition deliberately saved the learned, pre-prediction representations, so we don't need to do any complicated surgery on the model."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +39,6 @@
     "from torch.utils.data import DataLoader\n",
     "from transformer import LinearData, Transformer, LitTransformer\n",
     "\n",
-    "# use the data from ../generate\n",
     "samples_df = pd.read_csv(input_path)\n",
     "dataset = LinearData(samples_df)\n",
     "loader = DataLoader(dataset, batch_size=64)\n",
@@ -31,14 +46,21 @@
     "\n",
     "z = []\n",
     "with torch.no_grad():\n",
-    "  for x, y in loader:\n",
+    "  for x, _ in loader:\n",
     "    z_, _ = lit_model.model(x.to(device))\n",
     "    z.append(z_[0])"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can now convert those embeddings to a numpy array and save them to file."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,13 +70,6 @@
     "z0 = z0.view(z0.size(0), -1).cpu().numpy()\n",
     "np.savetxt(output_path, z0, delimiter=',')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
