--- a/estimate/interpretable.Rmd
+++ b/estimate/interpretable.Rmd
@@ -16,6 +16,7 @@ library(tidyverse)
 theme_set(theme_classic())
 set.seed(20240201)
 source("estimate/interpretable.R")
+subsample <- 1000
 ```
 
 ## Original Data
@@ -27,7 +28,8 @@ within which to store all our visualiations.
 
 ```{r}
 samples <- read_csv("data/blooms.csv") |>
-  mutate(class = factor(class))
+  mutate(class = factor(class)) |>
+  top_n(subsample)
 xy <- select(samples, -subject)
 p <- list()
 ```
@@ -54,6 +56,7 @@ lasso_result <- lasso_outputs(tune_spec, wf, xy)
 p[["lasso_raw"]] <- lasso_result$plot +
   labs(title = "(a) Original Lasso")
 lasso_result
+errors(lasso_result)
 ```
 
 The block below runs the stability analysis. Internally, `compare_splits` splits
@@ -64,6 +67,9 @@ the data in half, tunes a lasso model on each split, and returns both the figure
 p[["stability_raw"]] <- compare_splits(xy, lasso_result$grid)$p +
   theme(legend.position = "none") +
   labs(title = "(e) Original Lasso Stability")
+```
+
+```{r}
 ```
 
 ### Direct Decision Tree
@@ -79,6 +85,7 @@ final_tree <- tree_outputs(tree_spec, wf, xy)
 p[["tree_raw"]] <- final_tree$plot +
   labs(title = "(c) Original Tree")
 final_tree
+errors(final_tree)
 ```
 
 ## Featurization
@@ -139,6 +146,7 @@ a (mostly futile) effort to make them more readable.
 
 ```{r}
 lasso_result
+errors(lasso_result)
 p[["lasso_features"]] <- lasso_result$p +
   labs(title = "(b) Featurized Lasso") +
   scale_y_discrete(
@@ -147,6 +155,7 @@ p[["lasso_features"]] <- lasso_result$p +
   theme(axis.text.y = element_text(size = 5))
 
 tree_result
+errors(final_tree)
 p[["tree_features"]] <- tree_result$plot +
   labs(title = "(d) Featurized Tree")
 ```
@@ -169,4 +178,5 @@ to create the final version of Figure 1 in the text.
   (p[["tree_raw"]] / p[["tree_features"]]) |
   (p[["stability_raw"]] / p[["stability_features"]]) +
     plot_layout(guides = "collect")
+ggsave(glue("interpretable-{n_sample}.png"))
 ```
