--- a/estimate/transformer-5000.ipynb
+++ b/estimate/transformer-5000.ipynb
@@ -70,8 +70,7 @@
     "lit_model = LitTransformer(model)\n",
     "trainer = L.Trainer(max_epochs=70)\n",
     "\n",
-    "%time\n",
-    "trainer.fit(lit_model, loaders[\"train\"], loaders[\"validate\"])"
+    "%time trainer.fit(lit_model, loaders[\"train\"], loaders[\"validate\"])"
    ]
   },
   {
